tests/do/tmp/07_multi_return_match.stderr
error[MultiReturnInMatchTarget]: match 目标位不能直接使用多返回调用
 --> /._/do/tests/do/cases/err/07_multi_return_match.do:6:11
 hint: 先接收多返回值, 再把单值变量传给 match.
 6 |     match pair(1, 2) {
   |           ^
